# salt-extension

./: .pre-commit-config.yaml  README.md  RELEASE.md  pyproject.toml  setup.cfg
requirements/: base.txt  tests.in
requirements/py3.10/: tests.txt
requirements/py3.11/: tests.txt
requirements/py3.12/: tests.txt
requirements/py3.6/: tests.txt
requirements/py3.7/: tests.txt
requirements/py3.8/: tests.txt
requirements/py3.9/: tests.txt
src/saltext/cli/: __init__.py  __main__.py  templates.py
src/saltext/cli/project/: .coveragerc.j2  .gitignore.j2  .pre-commit-config.yaml.j2  .pylintrc  .pylintrc.j2  LICENSE.j2  README.md.j2  noxfile.py.j2  pyproject.toml.j2  setup.cfg.j2  setup.py
src/saltext/cli/project/.github/workflows/: test.yml.j2
src/saltext/cli/project/.pre-commit-hooks/: check-cli-examples.py.j2  make-autodocs.py.j2
src/saltext/cli/project/docs/: all.rst.j2  conf.py.j2  index.rst.j2
src/saltext/cli/project/requirements/: base.txt.j2  docs.in  docs.in.j2  tests.in
src/saltext/cli/project/tests/: conftest.py.j2
src/saltext/cli/project/tests/functional/: conftest.py
src/saltext/cli/project/tests/integration/: conftest.py
src/saltext/cli/project/tests/unit/: conftest.py
