[metadata]
name = salt-extension
description = Tool to simplify the creation of a new salt extension
long_description = file: README.md
long_description_content_type = text/markdown
author = Pedro Algarvio
author_email = pedro@algarvio.me
keywords = salt-extension
url = http://saltstack-project.io
project_urls =
    Source=https://github.com/salt-extensions/salt-extension
    Tracker=https://github.com/salt-extensions/salt-extension/issues
license = Apache Software License 2.0
classifiers =
    Programming Language :: Python
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
platforms = any

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find_namespace:
python_requires = >= 3.6
setup_requires =
  wheel
  setuptools>=50.3.2
  setuptools_scm[toml]>=3.4
  setuptools-declarative-requirements

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
console_scripts=
  create-salt-extension = saltext.cli.__main__:main

[requirements-files]
install_requires = requirements/base.txt
extras_require =
  tests = requirements/tests.in

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[mypy]
mypy_path = src/
ignore_missing_imports = True
no_implicit_optional = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unused_configs = True

[flake8]
max-line-length = 99
